--- a/tuning/index.html
+++ b/tuning/index.html
@@ -15,11 +15,10 @@
         <label for="engine">Engine (15k per stage, max 5)</label>
         <select id="engine">
           <option value="0">Stock</option>
-          <option value="1">Stage 1</option>
-          <option value="2">Stage 2</option>
-          <option value="3">Stage 3</option>
-          <option value="4">Stage 4</option>
-          <option value="5">Stage 5</option>
+          <option value="1">EMS Upgrade Level 1</option>
+          <option value="2">EMS Upgrade Level 2</option>
+          <option value="3">EMS Upgrade Level 3</option>
+          <option value="4">EMS Upgrade Level 4</option>
         </select>
       </div>
 
@@ -43,11 +42,11 @@
       <div class="option-card">
         <label for="suspension">Suspension (5k per stage, max 4)</label>
         <select id="suspension">
-          <option value="0">Stock</option>
-          <option value="1">Stage 1</option>
-          <option value="2">Stage 2</option>
-          <option value="3">Stage 3</option>
-          <option value="4">Stage 4</option>
+          <option value="0">Stock Suspension</option>
+          <option value="1">Lowered Suspension</option>
+          <option value="2">Street Suspension</option>
+          <option value="3">Sport Suspension3</option>
+          <option value="4">Competition Suspension</option>
         </select>
       </div>
 
@@ -55,10 +54,10 @@
       <div class="option-card">
         <label for="brakes">Brakes (4.5k per stage, max 3)</label>
         <select id="brakes">
-          <option value="0">Stock</option>
-          <option value="1">Stage 1</option>
-          <option value="2">Stage 2</option>
-          <option value="3">Stage 3</option>
+          <option value="0">Stock Brakes</option>
+          <option value="1">Street Brakes</option>
+          <option value="2">Sport Brakes</option>
+          <option value="3">Race Brakes</option>
         </select>
       </div>
 
@@ -80,6 +79,18 @@
           <option value="5">5 Parts</option>
         </select>
       </div>
+
+      <!-- Window Tinting -->
+      <div class="option-card">
+        <label for="tinting">Window Tinting (3k)</label>
+        <select id="tinting">
+          <option value="0">None</option>
+          <option value="1">Light Smoke</option>
+          <option value="2">Dark Smoke</option>
+          <option value="3">Limo (heaviest tint)</option>
+        </select>
+      </div>
+
 
       <!-- Color -->
       <div class="option-card">
