--- a/tuning/index.html
+++ b/tuning/index.html
@@ -45,7 +45,7 @@
           <option value="0">Stock Suspension</option>
           <option value="1">Lowered Suspension</option>
           <option value="2">Street Suspension</option>
-          <option value="3">Sport Suspension3</option>
+          <option value="3">Sport Suspension</option>
           <option value="4">Competition Suspension</option>
         </select>
       </div>
@@ -63,7 +63,6 @@
 
       <!-- Single upgrades -->
       <div class="option-card"><label><input type="checkbox" id="headlights"> Headlights (12k)</label></div>
-      <div class="option-card"><label><input type="checkbox" id="tinting"> Window Tinting (3k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="spz"> SPZ (3k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="horn"> Horn (2k)</label></div>
 
