--- a/tuning/index.html
+++ b/tuning/index.html
@@ -105,6 +105,7 @@
       </div>
 
       <button type="button" onclick="calculateTotal()">💰 Calculate Price</button>
+      <button type="button" onclick="resetForm()" class="reset-btn">🔄 Reset Tuning</button>
       <p id="totalPrice"></p>
     </form>
 
