--- a/tuning/index.html
+++ b/tuning/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>GTA V Tuning Shop</title>
+  <title>LARP Tuning Shop</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>🚗 GTA V Tuning Shop</h1>
+    <h1>🏛️ LARP Tuning Shop</h1>
 
     <form id="tuningForm">
       <!-- Engine -->
