--- a/tuning/index.html
+++ b/tuning/index.html
@@ -104,7 +104,7 @@
         </select>
       </div>
 
-      <button type="button" onclick="calculateTotal()">💰 Calculate Price</button>
+      <button type="button" onclick="checkPayment()">💰 Payment Check</button>
       <button type="button" onclick="resetForm()" class="reset-btn">🔄 Reset Tuning</button>
       <p id="totalPrice"></p>
     </form>
