--- a/tuning/index.html
+++ b/tuning/index.html
@@ -109,12 +109,10 @@
     </form>
 
     <div id="confirmBox" class="hidden">
-      <p>Did you pay?</p>
+      <p>Did you pay? (Pay for tuning !pay @Banka <span id="paymentAmount"></span>)</p>
       <button onclick="sendWebhook()">✅ Yes</button>
       <button onclick="resetForm()">❌ No</button>
     </div>
-  </div>
-
   <script src="script.js"></script>
 </body>
 </html>
