--- a/tuning/index.html
+++ b/tuning/index.html
@@ -109,7 +109,7 @@
     </form>
 
     <div id="confirmBox" class="hidden">
-      <p>Did you pay? (Pay for tuning !pay @Banka <span id="paymentAmount"></span>)</p>
+      <p>Did you pay? (!pay @Banka <span id="paymentAmount"></span>)</p>
       <button onclick="sendWebhook()">✅ Yes</button>
       <button onclick="resetForm()">❌ No</button>
     </div>
