--- a/dealership/index.html
+++ b/dealership/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DealerShop</title>
+  <title>DealerShip</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main class="wrap">
-    <h1>DealerShop</h1>
+    <h1>DealerShip</h1>
     <div id="grid" class="grid"></div>
   </main>
   <script src="script.js"></script>
