--- a/tuning/index.html
+++ b/tuning/index.html
@@ -65,6 +65,8 @@
       <div class="option-card"><label><input type="checkbox" id="headlights"> Headlights (12k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="spz"> SPZ (3k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="horn"> Horn (2k)</label></div>
+      <div class="option-card"><label><input type="checkbox" id="livery"> Livery (7k)</label></div>
+      <div class="option-card"><label><input type="checkbox" id="tire_smoke"> Tire smoke (20k)</label></div>
 
       <!-- Bodywork -->
       <div class="option-card">
@@ -76,6 +78,27 @@
           <option value="3">3 Parts</option>
           <option value="4">4 Parts</option>
           <option value="5">5 Parts</option>
+          <option value="6">6 Parts</option>
+          <option value="7">7 Parts</option>
+          <option value="8">8 Parts</option>
+          <option value="9">9 Parts</option>
+          <option value="10">10 Parts</option>
+          <option value="11">11 Parts</option>
+          <option value="12">12 Parts</option>
+          <option value="13">13 Parts</option>
+          <option value="14">14 Parts</option>
+          <option value="15">15 Parts</option>
+          <option value="16">16 Parts</option>
+          <option value="17">17 Parts</option>
+          <option value="18">18 Parts</option>
+          <option value="19">19 Parts</option>
+          <option value="20">20 Parts</option>
+          <option value="21">21 Parts</option>
+          <option value="22">22 Parts</option>
+          <option value="23">23 Parts</option>
+          <option value="24">24 Parts</option>
+          <option value="25">25 Parts</option>
+          
         </select>
       </div>
 
@@ -89,8 +112,17 @@
           <option value="3">Limo (heaviest tint)</option>
         </select>
       </div>
-
-
+      <!-- Underglow -->
+      <div class="option-card">
+        <label for="underglow">Underglow (10k per level, max 4)</label>
+        <select id="underglow">
+          <option value="0">No Underglow</option>
+          <option value="1">Level 1</option>
+          <option value="2">Level 2</option>
+          <option value="3">Level 3</option>
+          <option value="4">Level 4</option>
+        </select>
+      </div>
       <!-- Color -->
       <div class="option-card">
         <label for="color">Color (4k per respray)</label>
