--- a/tuning/index.html
+++ b/tuning/index.html
@@ -107,9 +107,11 @@
         <label for="tinting">Window Tinting (3k)</label>
         <select id="tinting">
           <option value="0">None</option>
-          <option value="1">Light Smoke</option>
-          <option value="2">Dark Smoke</option>
-          <option value="3">Limo (heaviest tint)</option>
+          <option value="1">Limo</option>
+          <option value="2">Light Smoke</option>
+          <option value="3">Dark Smoke</option>
+          <option value="4">Pure Black</option>
+          <option value="5">Green</option>
         </select>
       </div>
       <!-- Underglow -->
