--- a/tuning/index.html
+++ b/tuning/index.html
@@ -65,6 +65,7 @@
       <div class="option-card"><label><input type="checkbox" id="headlights"> Headlights (12k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="spz"> SPZ (3k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="horn"> Horn (2k)</label></div>
+      <div class="option-card"><label><input type="checkbox" id="akrapovic"> Akrapovic (20k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="livery"> Livery (7k)</label></div>
       <div class="option-card"><label><input type="checkbox" id="tire_smoke"> Tire smoke (20k)</label></div>
 
