--- a/404.html
+++ b/404.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>E.L.K: 404 Error.</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404 - Page Not Found</title>
+  <style>
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: #0e141a;
+      color: #e6edf5;
+      font-family: Arial, sans-serif;
+      margin: 0;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .btn {
+      padding: 10px 20px;
+      background-color: #4ea1ff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    .btn:hover {
+      background-color: #338ccf;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
+  <div>
     <h1>404 - Page Not Found</h1>
-    <p>Oops! The page you are looking for might have been removed,<br>renamed, or is temporarily unavailable.</p>
-    
-    <div class="search-bar">
-      <input type="text" placeholder="Search the site..." aria-label="Search" />
-      <button aria-label="Search button">🔍</button>
-    </div>
-
-    <nav>
-      <a href="scripty.my/" class="btn">Homepage</a>
-      <a href="scripty.my/" class="btn">Latest Articles</a>
-      <a href="scripty.my/" class="btn">FAQs</a>
-</nav>
-
-  <footer>
-    © 2025 Skibidi Computing. All rights reserved.<br />
-    Contact us: <a href="scripty.my/">click for contact</a>
-  </footer>
-
+    <button class="btn" onclick="window.location.href='/'">Go Back to Home</button>
+  </div>
 </body>
 </html>
