--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
       color: #e6edf5;
       font-family: Arial, sans-serif;
       margin: 0;
+      flex-direction: column;
     }
     h1 {
       font-size: 2rem;
@@ -26,9 +27,19 @@
       border: none;
       cursor: pointer;
       font-size: 1rem;
+      margin: 5px;
     }
     .btn:hover {
       background-color: #338ccf;
+    }
+    a {
+      color: #4ea1ff;
+      text-decoration: none;
+      font-size: 1rem;
+      margin-top: 10px;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -36,6 +47,9 @@
   <div>
     <h1>404 - Page Not Found</h1>
     <button class="btn" onclick="window.location.href='/'">Go Back to Home</button>
+    <br>
+    <a href="https://scripty.my/tuning" class="btn">Go to Tuning Page</a>
+    <a href="https://scripty.my/dealership" class="btn">Go to Dealership Page</a>
   </div>
 </body>
 </html>
