--- a/404.html
+++ b/404.html
@@ -5,51 +5,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 - Page Not Found</title>
   <style>
+    /* General Body Styling */
     body {
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background: #0e141a;
+      background: #121b28; /* Darker background */
       color: #e6edf5;
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       flex-direction: column;
+      text-align: center;
     }
+
     h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
+      font-size: 3rem;
+      margin-bottom: 30px;
+      font-weight: bold;
     }
+
+    /* Main Container for Buttons */
+    .btn-container {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    /* Button Styles */
     .btn {
-      padding: 10px 20px;
+      padding: 15px 30px;
       background-color: #4ea1ff;
       color: white;
-      border: none;
+      border: 2px solid #4ea1ff;
+      border-radius: 50px;
+      font-size: 1.2rem;
+      text-align: center;
       cursor: pointer;
-      font-size: 1rem;
-      margin: 5px;
+      transition: all 0.3s ease-in-out;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      width: 250px;
+      margin: 5px 0;
     }
+
     .btn:hover {
       background-color: #338ccf;
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
     }
+
+    .btn:focus {
+      outline: none;
+    }
+
+    /* Link Styling */
     a {
       color: #4ea1ff;
       text-decoration: none;
-      font-size: 1rem;
-      margin-top: 10px;
+      font-size: 1.1rem;
+      font-weight: 500;
     }
+
     a:hover {
       text-decoration: underline;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+      .btn {
+        width: 200px;
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
   <div>
     <h1>404 - Page Not Found</h1>
-    <button class="btn" onclick="window.location.href='/'">Go Back to Home</button>
-    <br>
-    <a href="https://scripty.my/tuning" class="btn">Go to Tuning Page</a>
-    <a href="https://scripty.my/dealership" class="btn">Go to Dealership Page</a>
+    <div class="btn-container">
+      <button class="btn" onclick="window.location.href='/'">Go Back to Home</button>
+      <a href="https://scripty.my/tuning" class="btn">Go to Tuning Page</a>
+      <a href="https://scripty.my/dealership" class="btn">Go to Dealership Page</a>
+    </div>
   </div>
 </body>
 </html>
