--- a/404.html
+++ b/404.html
@@ -25,49 +25,67 @@
       font-weight: bold;
     }
 
-    /* Main Container for Buttons */
+    /* Button Container */
     .btn-container {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 20px;
+      width: 100%;
+      max-width: 400px; /* Restrict width */
     }
 
-    /* Button Styles */
-    .btn {
-      padding: 15px 30px;
+    /* Main Button Style (Go Back to Home) */
+    .btn-main {
+      padding: 15px 0;
       background-color: #4ea1ff;
       color: white;
       border: 2px solid #4ea1ff;
       border-radius: 50px;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       text-align: center;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      width: 250px;
+      width: 100%;
       margin: 5px 0;
     }
 
-    .btn:hover {
+    /* Secondary Buttons */
+    .btn-secondary {
+      padding: 12px 0;
       background-color: #338ccf;
+      color: white;
+      border: 2px solid #338ccf;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      text-align: center;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+      width: 100%;
+    }
+
+    /* Hover Effects */
+    .btn-main:hover, .btn-secondary:hover {
       transform: translateY(-5px);
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
     }
 
-    .btn:focus {
-      outline: none;
-    }
-
-    /* Link Styling */
-    a {
+    /* Links with Button Style */
+    .btn-link {
+      background-color: transparent;
+      border: 2px solid transparent;
       color: #4ea1ff;
-      text-decoration: none;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: 500;
+      padding: 12px 0;
+      text-decoration: none;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
     }
 
-    a:hover {
+    .btn-link:hover {
       text-decoration: underline;
+      color: #338ccf;
     }
 
     /* Responsive Design */
@@ -75,9 +93,8 @@
       h1 {
         font-size: 2rem;
       }
-      .btn {
-        width: 200px;
-        font-size: 1rem;
+      .btn-main, .btn-secondary {
+        font-size: 1.2rem;
       }
     }
   </style>
@@ -86,9 +103,12 @@
   <div>
     <h1>404 - Page Not Found</h1>
     <div class="btn-container">
-      <button class="btn" onclick="window.location.href='/'">Go Back to Home</button>
-      <a href="https://scripty.my/tuning" class="btn">Go to Tuning Page</a>
-      <a href="https://scripty.my/dealership" class="btn">Go to Dealership Page</a>
+      <!-- Main "Go Back to Home" Button -->
+      <button class="btn-main" onclick="window.location.href='/'">Go Back to Home</button>
+      
+      <!-- Secondary "Tuning" and "Dealership" Buttons -->
+      <a href="https://scripty.my/tuning" class="btn-secondary">Go to Tuning Page</a>
+      <a href="https://scripty.my/dealership" class="btn-secondary">Go to Dealership Page</a>
     </div>
   </div>
 </body>
