--- a/tuning/index.html
+++ b/tuning/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LARP Tuning Shop</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
