--- a/instagram/index.html
+++ b/instagram/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" type="image/png">
-    <title>Instagram.com</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
