--- a/download/index.html
+++ b/download/index.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <script src="/download/download.js"></script>
+  <script src="/download/download-o.js"></script>
 
   <script>
     window.onload = function () {
