--- a/index.html
+++ b/index.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>E.L.K: 404 Error.</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ScriptyHub</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>404 - Page Not Found</h1>
-    <p>Oops! The page you are looking for might have been removed,<br>renamed, or is temporarily unavailable.</p>
-    
-    <div class="search-bar">
-      <input type="text" placeholder="Search the site..." aria-label="Search" />
-      <button aria-label="Search button">🔍</button>
-    </div>
+    <header>
+      <div class="avatar">
+        <img src="https://media.discordapp.net/attachments/1386287641540034583/1416506499739422730/game_logo2.png?ex=68d792ba&is=68d6413a&hm=b035384a8028f8d59a6eb39daa864ecb6b0aee7b9a05eaa217437415ef657893&=&format=webp&quality=lossless&width=885&height=873" alt="Logo">
+      </div>
+      <h1>ScriptyHub</h1>
+      <p class="tagline">Developer • Discord Bots • Web Projects</p>
+    </header>
 
-    <nav>
-      <a href="https://discord.gg/zTxAfsDJs8" class="btn">Homepage</a>
-      <a href="https://discord.gg/zTxAfsDJs8" class="btn">Latest Articles</a>
-      <a href="https://discord.gg/zTxAfsDJs8" class="btn">FAQs</a>
-</nav>
+    <main>
+      <a href="/instagram" class="link-card">
+        <span>📸 Instagram</span>
+      </a>
+      <a href="/dox" class="link-card">
+        <span>📁 Dox</span>
+      </a>
+      <a href="/tuning" class="link-card">
+        <span>⚙️ Tuning</span>
+      </a>
+      <a href="/dealership" class="link-card">
+        <span>🏷️ Dealership</span>
+      </a>
+      <a href="/download" class="link-card">
+        <span>⬇️ Download</span>
+      </a>
+    </main>
 
-  <footer>
-    © 2025 Skibidi Computing. All rights reserved.<br />
-    Contact us: <a href="https://discord.gg/zTxAfsDJs8">click for contact</a>
-  </footer>
+    <footer>
+      <p>© 2025 ScriptyHub — All rights reserved.</p>
+    </footer>
+  </div>
 
-  <script defer src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
