--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ScriptyHub</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1386287641540034583/1416506499739422730/game_logo2.png?ex=68d83b7a&is=68d6e9fa&hm=c13f39105107f2c0ef863d66c929ce0a0636cbf9f6e062493c503f796a6aa002">
 </head>
 <body>
   <div class="container">
     <header>
       <div class="avatar">
-        <img src="https://media.discordapp.net/attachments/1386287641540034583/1416506499739422730/game_logo2.png?ex=68d792ba&is=68d6413a&hm=b035384a8028f8d59a6eb39daa864ecb6b0aee7b9a05eaa217437415ef657893&=&format=webp&quality=lossless&width=885&height=873" alt="Logo">
+        <img src="https://cdn.discordapp.com/attachments/1386287641540034583/1416506499739422730/game_logo2.png?ex=68d83b7a&is=68d6e9fa&hm=c13f39105107f2c0ef863d66c929ce0a0636cbf9f6e062493c503f796a6aa002" alt="Logo">
       </div>
       <h1>ScriptyHub</h1>
       <p class="tagline">Developer • Discord Bots • Web Projects</p>
