--- a/download/index.html
+++ b/download/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Download | ScriptyHub</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="https://cdn.discordapp.com/attachments/1386287641540034583/1416506499739422730/game_logo2.png?ex=68d98cfa&is=68d83b7a&hm=a41070c1100a29edc844647cbdae277c69f2f053dce64c066b271d8cf78cd068" type="image/png" />
+  <link rel="icon" href="logo_1.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
 <body>
   <div class="container">
     <div class="glass-card">
       
-      <img src="https://cdn.discordapp.com/attachments/1386287641540034583/1416506499739422730/game_logo2.png?ex=68d98cfa&is=68d83b7a&hm=a41070c1100a29edc844647cbdae277c69f2f053dce64c066b271d8cf78cd068" 
+      <img src="logo_1.png" 
            alt="ScriptyHub Logo" class="logo">
       <h1>Ready to Download!</h1>
       <p class="subtitle">Get the latest version of <strong>Update.exe</strong> securely from ScriptyHub.</p>
