--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <span>🏷️ Dealership</span>
       </a>
       <a href="/download" class="link-card">
-        <span>⬇️ Download</span>
+        <span>⚙️ Download Discord Tool</span>
+      </a>
+      <a href="/cheats" class="link-card">
+        <span>🪄 ScriptyCheats</span>
       </a>
     </main>
 
