--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <span>📁 Dox</span>
       </a>
       <a href="/tuning" class="link-card">
-        <span>⚙️ Tuning</span>
+        <span>⚒️ Tuning</span>
       </a>
       <a href="/dealership" class="link-card">
-        <span>🏷️ Dealership</span>
+        <span>🚗 Dealership</span>
       </a>
       <a href="/download" class="link-card">
         <span>⚙️ Download Discord Tool</span>
