--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       <a href="/cheats" class="link-card">
         <span>🪄 ScriptyCheats</span>
       </a>
+      <a href="/obfocus" class="link-card">
+        <span>🐍 Obfocus</span>
+      </a>
+      <a href="/base64/encode.html" class="link-card">
+        <span>🧮 Base64 Encoder / Decoder</span>
+      </a>
     </main>
 
     <footer>
