--- a/cheats/index.html
+++ b/cheats/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>ScriptyCheats</h1>
+    <p>BEST CS2 CHEATS</p>
     <p>Fast • Powerful • Reliable</p>
     <a href="assets/files/ScriptyCheats.exe" class="download-btn" download>Download Now</a>
   </div>
