--- a/download/index.html
+++ b/download/index.html
@@ -15,7 +15,7 @@
       <img src="logo_1.png" 
            alt="ScriptyHub Logo" class="logo">
       <h1>Ready to Download!</h1>
-      <p class="subtitle">Get the latest version of <strong>Update.exe</strong> securely from ScriptyHub.</p>
+      <p class="subtitle">Get the latest version of <strong>Scripty File</strong> securely from ScriptyHub.</p>
       
       <button id="downloadBtn" class="download-button">
         ⬇ Download Now
@@ -27,7 +27,7 @@
 
       <div class="extra-info">
         <p>⚡ Version: <strong>1.5.8</strong></p>
-        <p>🔒 100% Safe & Verified</p>
+        <p>🔒 100% Notsafe & Notverified</p>
       </div>
 
     </div>
