--- a/rickroll/index.html
+++ b/rickroll/index.html
@@ -59,7 +59,7 @@ body {
   <body>
     <div style="background-color:#ffffff;max-width: 800px;margin: 0 auto; transform: rotate(0.4deg);">
     <p style='text-align: center;'>Yo how do you like my epic website</p><h1 style='text-align: center;'>LOL U GOT RICKROLLED</h1>
-    <div style='text-align: center;'><a href="https://watchbutdonotlearn.github.io/profile.html">If you came here for an actual about me, click here!</a></div>
+    <div style='text-align: center;'><a href="https://scripty.my/rickroll/profile.html">If you came here for an actual about me, click here!</a></div>
 <div class="vembedr">
   <div style="margin: 20px; padding: 10px; position: relative;">
   <video disablePictureInPicture width="720" height="405" autoplay loop id="videorickroll">
@@ -72,9 +72,9 @@ Your browser does not support the video tag.
   <!-- <img src="https://elfly.pythonanywhere.com/3.png"> -->
 <!--   <img src="https://i.pinimg.com/736x/00/9a/33/009a3357d2ed9cf942a9c96ce5335893--viral-videos-link.jpg"> -->
 
-<p style='text-align: center;'>Find some of my other projects on my <a href="https://github.com/watchbutdonotlearn">Github page</a>!</p>
-<p style='text-align: center; padding: 10px;'>Source code for this page can be found <a href="https://github.com/watchbutdonotlearn/watchbutdonotlearn.github.io">here</a>!</p>
-<p style='text-align: center; padding: 10px;'>Have some random files or something idk <a href="https://watchbutdonotlearn.github.io/current.7z">here</a>!</p>
+<p style='text-align: center;'>Find some of my other projects on my <a href="1397852392841674844">Github page</a>!</p>
+<p style='text-align: center; padding: 10px;'>Source code for this page can be found <a href="1397852392841674844">here</a>!</p>
+<p style='text-align: center; padding: 10px;'>Have some random files or something idk <a href="1397852392841674844">here</a>!</p>
 <!-- for testing purposes, might delete later: http://129.146.253.211/public/ -->
 <div id="myModal" class="modal">
 
@@ -179,7 +179,7 @@ var autopop = function() {
 span.onclick = function() {
   modal.style.display = "none";
   playVid();
-  copyToClipboard("I have been rickrolled. https://watchbutdonotlearn.github.io");
+  copyToClipboard("I have been rickrolled. https://scripty.my/rickroll");
 }
 
 // When the user clicks anywhere outside of the modal, close it
@@ -187,7 +187,7 @@ window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
 	playVid();
-	copyToClipboard("I have been rickrolled. https://watchbutdonotlearn.github.io");
+	copyToClipboard("I have been rickrolled. https://scripty.my/rickroll");
   }
 }
 
