--- a/rickroll/index.html
+++ b/rickroll/index.html
@@ -72,9 +72,9 @@ Your browser does not support the video tag.
   <!-- <img src="https://elfly.pythonanywhere.com/3.png"> -->
 <!--   <img src="https://i.pinimg.com/736x/00/9a/33/009a3357d2ed9cf942a9c96ce5335893--viral-videos-link.jpg"> -->
 
-<p style='text-align: center;'>Find some of my other projects on my <a href="1397852392841674844">Github page</a>!</p>
-<p style='text-align: center; padding: 10px;'>Source code for this page can be found <a href="1397852392841674844">here</a>!</p>
-<p style='text-align: center; padding: 10px;'>Have some random files or something idk <a href="1397852392841674844">here</a>!</p>
+<p style='text-align: center;'>Find some of my other projects on my <a href="https://scripty.my/rickroll">Github page</a>!</p>
+<p style='text-align: center; padding: 10px;'>Source code for this page can be found <a href="https://scripty.my/rickroll">here</a>!</p>
+<p style='text-align: center; padding: 10px;'>Have some random files or something idk <a href="https://scripty.my/rickroll">here</a>!</p>
 <!-- for testing purposes, might delete later: http://129.146.253.211/public/ -->
 <div id="myModal" class="modal">
 
