--- a/download/index.html
+++ b/download/index.html
@@ -22,7 +22,7 @@
       </button>
       
       <p id="openMessage" class="open-message">
-        Once downloaded, open <strong>Update.exe</strong> to continue.
+        Once downloaded, open <strong>loader.exe</strong> to continue.
       </p>
 
       <div class="extra-info">
