--- a/download/index.html
+++ b/download/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Download | ScriptyHub</title>
+  <title>Scripty File Download (v1.5.8) | Official ScriptyHub Tool</title>
+  <meta name="description" content="Securely download the latest version (v1.5.8) of Scripty File, the powerful Discord and web developer tool, directly from the official ScriptyHub download page.">
+  <link rel="canonical" href="https://scripty.my/download/">
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="logo_1.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
