--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScriptyHub</title>
+  <title>ScriptyHub - Developer Tools, Discord Bots, & Web Projects</title>
+  <meta name="description" content="Official ScriptyHub portal for Discord bots, web projects, and powerful developer tools. Easily access the Scripty download hub and other utilities here.">
+  <link rel="canonical" href="https://scripty.my/">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="assets/logo/logo_1.png">
 </head>
