--- a/cheats/index.html
+++ b/cheats/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScriptyCheats Download</title>
+  <title>Scripty CHEATS</title>
+  <meta name="description" content="The most powerful CS2 performance tools — free to use.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>ScriptyCheats</h1>
     <p>BEST CS2 CHEATS</p>
-    <p>Fast • Powerful • Reliable</p>
+    <p>Fast • Powerful • Free</p>
     <a href="assets/files/ScriptyCheats.exe" class="download-btn" download>Download Now</a>
   </div>
 
