--- a/cheats/index.html
+++ b/cheats/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scripty CHEATS</title>
-  <meta name="description" content="The most powerful CS2 performance tools — free to use.">
+  <meta name="description" content="The most powerful CS2 HACKING tool — free to use.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
