--- a/cheats/index.html
+++ b/cheats/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="assets/logo/logo_1.png">
 </head>
 <body>
 
@@ -33,7 +34,7 @@
       </p>
 
       <div class="cta-group">
-        <a href="assets/files/CS2external.exe" class="btn-primary" download>
+        <a href="assets/files/CS2external.exe" class="btn-primary download-btn" download>
           INITIATE DOWNLOAD <span class="icon">↓</span>
         </a>
         <button id="source-btn" class="btn-text">
