--- a/cheats/index.html
+++ b/cheats/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scripty | Premium CS2 Extenal</title>
-  <meta name="description" content="The most powerful free CS2 External cheat. Includes aimbot, wallhack, skin changer, and lots more.">
+  <title>Scripty cheats | Premium CS2 Cheats | Download Counter-Strike cheats free</title>
+  <meta name="description" content="The most powerful free CS2 cheat. Scripty cheats are best on market. Download scripty cheats for CS2 free here !">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
