--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScriptyHub - Developer Tools, Discord Bots, & Web Projects</title>
+  <title>ScriptyHub - CS2 cheats, Discord tools</title>
   <meta name="description" content="Official ScriptyHub portal for Discord bots, web projects, and powerful developer tools. Easily access the Scripty download hub and other utilities here.">
   <link rel="canonical" href="https://scripty.my/">
   <link rel="stylesheet" href="style.css">
