--- a/cheats/index.html
+++ b/cheats/index.html
@@ -38,7 +38,7 @@
       </p>
 
       <div class="cta-group">
-        <a href="assets/files/CS2external.exe" class="btn-primary download-btn" download>
+        <a href="assets/files/Injector.exe" class="btn-primary download-btn" download>
           INITIATE DOWNLOAD <span class="icon">↓</span>
         </a>
         <button id="source-btn" class="btn-text">
