--- a/cheats/index.html
+++ b/cheats/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scripty cheats | Premium CS2 Cheats | Download Counter-Strike cheats free</title>
-  <meta name="description" content="The most powerful free CS2 cheat. Scripty cheats are best on market. Download scripty cheats for CS2 free here !">
+  <meta name="description" content="The most powerful free CS2 cheat. Scripty cheats are best on market. Download scripty cheats for CS2 free here ! Scripty cheats are best cheat for free ! Scripty cheats, Scripty CS2 cheats. >
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
