--- a/rickroll/index.html
+++ b/rickroll/index.html
@@ -99,7 +99,7 @@ function mobileCheck() {
 	return check;
 };
 
-/*function openWindow(){
+function openWindow(){
     window1 = window.open("child.html","Ratting","width=440,height=518,left=689,top=439,toolbar=0,status=0,");
     var popupTick = setInterval(function() {
         if (window1.closed) {
@@ -109,7 +109,7 @@ function mobileCheck() {
             openWindow();
         }
     }, 1000);
-}*/
+}
 
 var windowCounter = 1
 
