--- a/database/index.html
+++ b/database/index.html
@@ -78,7 +78,7 @@
         <div class="modal-box">
             <h3 style="color:#fff; margin-top:0;">Reset Password</h3>
             <input type="email" id="reset-email" placeholder="Email Address">
-            <button onclick="sendResetEmail()">Send Link</button>
+            <button onclick="sendResetEmail()">Send Link</button>/database/
             <button class="btn-secondary" onclick="closeResetModal()">Cancel</button>
         </div>
     </div>
