--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -53,7 +53,7 @@
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
-        const ADMIN_UID = "YOUR_ADMIN_UID_HERE"; 
+        const ADMIN_UID = "sJSL8EjvFhMpoiD4yaAThWDKsf32"; 
 
         // STATE
         let isRegisterMode = false;
