--- a/dashboard/panel.html
+++ b/dashboard/panel.html
@@ -164,7 +164,7 @@
         const dbRef = ref(db);
 
         // --- SECURITY: ADMIN CHECK ---
-        const ADMIN_UID = "YOUR_ADMIN_UID_HERE"; // <--- CHANGE THIS TO YOUR UID
+        const ADMIN_UID = "sJSL8EjvFhMpoiD4yaAThWDKsf32"; // <--- CHANGE THIS TO YOUR UID
 
         onAuthStateChanged(auth, (user) => {
             if (user) {
