--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potkan Portal</title>
+    <title>Scripty RAT</title>
     <style>
         body { background-color: #0f172a; color: #e2e8f0; font-family: 'Segoe UI', sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0; }
         .card { background: #1e293b; padding: 40px; border-radius: 16px; border: 1px solid #3b82f6; width: 100%; max-width: 400px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
@@ -36,7 +36,7 @@
 
     <!-- PUBLIC PAGE -->
     <div id="publicMessage" class="card" style="border-color: #22c55e;">
-        <h1>🚀 Potkan Tools</h1>
+        <h1>🚀 Scripty RAT</h1>
         <p>Welcome! We are currently preparing our exclusive product line.</p>
         <button class="btn-sec" onclick="logout()">Log Out</button>
     </div>
