--- a/dashboard/panel.html
+++ b/dashboard/panel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-PC Control | Potkan</title>
+    <title>ScriptyRAT | admin</title>
     <style>
         /* (Keep your existing CSS styles perfectly intact) */
         :root { --bg: #0f172a; --card: #1e293b; --text: #e2e8f0; --accent: #3b82f6; --danger: #ef4444; --success: #22c55e; --warn: #eab308; }
@@ -65,7 +65,7 @@
         <button class="logout-btn" onclick="logout()">Log Out</button>
     </div>
 
-    <h1>🚀 Multi-PC Command</h1>
+    <h1>🚀 Remote access</h1>
 
     <!-- STEP 1: SELECT PC -->
     <div class="pc-selector">
