--- a/dashboard/panel.html
+++ b/dashboard/panel.html
@@ -63,7 +63,7 @@
     <div id="mainDashboard" class="dashboard"> 
         
         <!-- POWER & INPUT -->
-        <div class="card">
+        <div class="card" style="border-color: #ff9100;">
             <div class="card-header">⚡ Power & Input</div>
             <div class="grid-buttons">
                 <button class="btn-info" onclick="cmd('lock_pc')">🔒 Lock PC</button>
@@ -110,7 +110,7 @@
         </div>
 
         <!-- MEDIA -->
-        <div class="card">
+        <div class="card" style="border-color: #3cff6d;">
             <div class="card-header">🔊 Media</div>
             <div class="grid-buttons">
                 <button class="btn-gray" onclick="cmd('mute')">🔇 Mute</button>
@@ -121,7 +121,7 @@
         </div>
 
         <!-- FUN & NETWORK -->
-        <div class="card">
+        <div class="card" style="border-color: #00ffff;">
             <div class="card-header">👻 Fun & Network</div>
             <div class="grid-buttons">
                 <button class="btn-warn full-width" onclick="cmd('jumpscare')">👻 Jumpscare</button>
