--- a/dashboard/panel.html
+++ b/dashboard/panel.html
@@ -134,7 +134,7 @@
     </div>
 
     <!-- LOGS -->
-    <div class="logs-container">
+    <div class="logs-container" style="border-color: #ffffffab;">
         <div class="log-title">Command History</div>
         <ul class="log-list" id="logList"></ul>
     </div>
